# interprocessor-matrix-multiplication

./: CMakeLists.txt  README.md  master.c  worker.c
libs/: CMakeLists.txt
libs/array/: CMakeLists.txt  array.c  array.h
libs/color_print/: CMakeLists.txt  color_print.h
libs/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/message/: CMakeLists.txt  message.h
libs/messages_to_console/: CMakeLists.txt  messages_to_console.c  messages_to_console.h
